﻿drkns 31.01.2016 22:59:13 +0200 - build 4525

1. 0002900: Меню из файла-списка: проблема при вызове из User menu
   Переписана половина запускателя, исправлено множество багов, возможно, наделано новых.

2. System.Executor.SilentExternal больше нет.

3. Нажатие Enter при отключенных панелях теперь прокручивает вывод, как в cmd.

w17 29.01.2016 21:57:57 +0300 - build 4524

1. Fix 4484. aka M#3162: Исчезновение текста во вьювере

w17 29.01.2016 16:55:57 +0300 - build 4523

1. Продолжение 4521.
   Теперь "D:\Path Name"\ глобальная фича - так работает QuoteSpace().

w17 27.01.2016 23:06:51 +0300 - build 4522

1. Экспериментально: кастомизация языковых файлов без редактирования генерируемых 'родных' файлов .lng

   Чтобы работало надо:
   1) создать полные версии языковых файлов обновлённым генератором lng.generator.exe, в новой сборке должны быть.
   2) создать свой файл с изменениями для нужных языков

   Имя файла = <Оригинал>.custom, например FarRus.lng.custom, FarEng.lng.custom
   Файл ищется в %FARHOME% и %FARPROFILE% (можно создать 2 файла)

   Файл должен содержать строки вида:
   MessageId = "Modified Text"
   например:
   MListFileSize = " %1 bytes in %2 files, %3 folders "
   Нужный MessageId можно найти в оригинальном файле, там это выглядит так:
   //[MessageId]
   "Original text"
   //[MListFileSize]
   " Bytes: %1, files: %2, folders: %3 "
   Такой формат также допустим в .lng.custom файлах.
   //[MListFileSize]
   " %1 bytes in %2 files, %3 folders "

w17 26.01.2016 14:09:42 +0300 - build 4521

1. M#3011: Ctrl+Enter works wrong for ".." for case if path have spaces
   "D:\Path Name\" --> "D:\Path Name"\ 

drkns 26.01.2016 09:43:57 +0200 - build 4520

1. Уточнение 4516.

2. С форума: лишняя перерисовка меню ассоциаций.

drkns 26.01.2016 02:19:36 +0200 - build 4519

1. Уточнение 4516.

drkns 26.01.2016 00:15:06 +0200 - build 4518

1. С форума: При повторном просмотре файла по F3 меняется его отображение

drkns 24.01.2016 20:10:32 +0200 - build 4517
