@@ -1,4 +1,8 @@
-﻿drkns 31.01.2016 22:59:13 +0200 - build 4525
+﻿drkns 01.02.2016 01:11:06 +0200 - build 4526
+
+1. Говорят, после 4516 странно работала средняя кнопка мыши в панелях.
+
+drkns 31.01.2016 22:59:13 +0200 - build 4525
 
 1. 0002900: Меню из файла-списка: проблема при вызове из User menu
    Переписана половина запускателя, исправлено множество багов, возможно, наделано новых.
